# cagoule

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  README.md  SECURITY.md  benshmak_results.md  cagoule_bench.toml  pyproject.toml  recomendation.md  regenerate_kat.py
.github/workflows/: ci.yml  tests.yml
CAGOULE v2.0/: CHANGELOG.md
CAGOULE_v1.5.0_final/: .gitignore  MANIFEST.in  README.md  pyproject.toml  run_tests.py
CAGOULE_v1.5.0_final/.github/workflows/: publish.yml
CAGOULE_v1.5.0_final/cagoule/: __version__.py  params.py  sbox.py
CAGOULE_v1.5.0_final/scripts/: benchmark.py
CAGOULE_v1.5.0_final/tests/: conftest.py  test_cipher.py  test_format.py  test_fp2.py  test_kat.py  test_matrix.py  test_mu.py  test_nist.py  test_sbox.py
CAGOULE_v2.1.0_source/cagoule_v210/: CHANGELOG.md  PROJECT_STRUCTURE.md  cagoule-bench.md
CAGOULE_v2.1.0_source/cagoule_v210/cagoule/: .gitignore  README.md  pyproject.toml  regenerate_kat.py
CAGOULE_v2.1.0_source/cagoule_v210/cagoule/cagoule/: __init__.py  __version__.py  _binding.py  cipher.py  decipher.py  format.py  kat_vectors.json  logger.py  matrix.py  mu.py  omega.py  sbox.py  test_bindings.py  utils.py
CAGOULE_v2.1.0_source/cagoule_v210/cagoule/cagoule.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
CAGOULE_v2.1.0_source/cagoule_v210/cagoule/cagoule/c/: Makefile  test_cipher  test_math  test_matrix  test_omega  test_sbox
CAGOULE_v2.1.0_source/cagoule_v210/cagoule/cagoule/c/include/: cagoule_cipher.h  cagoule_math.h  cagoule_matrix.h  cagoule_omega.h  cagoule_sbox.h
CAGOULE_v2.1.0_source/cagoule_v210/cagoule/cagoule/c/src/: cagoule_cipher.c  cagoule_cipher.d  cagoule_matrix.c  cagoule_matrix.d  cagoule_omega.c
CAGOULE_v2.1.0_source/cagoule_v210/cagoule/cagoule/c/tests/: test_cipher.c  test_math.c  test_matrix.c  test_omega.c
CAGOULE_v2.1.0_source/cagoule_v210/cagoule/tests/: conftest.py  kat_omega_vectors.json  test_cipher.py  test_format.py  test_fp2.py  test_kat.py  test_matrix.py  test_mu.py  test_nist.py  test_omega.py  test_sbox.py
CAGOULE_v2_2_0_source/: CAGOULE_v2.2.0_Performance_Evolution.md  CHANGING.md
CAGOULE_v2_2_0_source/cagoule_v220/cagoule/: .gitignore  README.md  pyproject.toml  regenerate_kat.py
CAGOULE_v2_3_0_clean/: .gitignore  CAGOULE_v2.3.0_Performance_Evolution.md  README.md  conclusion.md  pyproject.toml
CAGOULE_v2_3_0_clean/cagoule/: __version__.py  _binding.py  _buffer_pool.py  cipher.py  fp2.py  kat_vectors.json  logger.py
CAGOULE_v2_3_0_clean/cagoule/c/: test_cipher  test_math_avx2  test_matrix  test_matrix_avx2
CAGOULE_v2_3_0_clean/cagoule/cagoule/: __version__.py
CAGOULE_v2_3_0_clean/tests/: test_fp2.py  test_kat.py  test_mu.py  test_sbox.py
CAGOULE_v2_4_0_release/CAGOULE_v2_4_0/: .gitignore  README.md  cagoule_bench.toml  pyproject.toml
CAGOULE_v2_4_0_release/CAGOULE_v2_4_0/cagoule/: __version__.py  _binding.py  _buffer_pool.py  decipher.py  format.py  fp2.py  kat_vectors.json  logger.py  matrix.py  mu.py  omega.py  params.py  sbox.py  utils.py
CAGOULE_v2_4_0_release/CAGOULE_v2_4_0/cagoule.egg-info/: SOURCES.txt
CAGOULE_v2_4_0_release/CAGOULE_v2_4_0/tests/: conftest.py  kat_omega_vectors.json  test_cipher.py  test_format.py  test_fp2.py  test_kat.py  test_matrix.py  test_nist.py  test_omega.py
CAGOULE_v2_5_0_release/: README.md  benchmarks.md  cagoule_bench.toml  recomendation.md
CAGOULE_v2_5_0_release/CAGOULE_v2_5_0_FINAL/: README.md  pyproject.toml  regenerate_kat.py
CAGOULE_v2_5_0_release/CAGOULE_v2_5_0_FINAL/cagoule/: cipher.py  decipher.py  kat_vectors.json  sbox.py
CAGOULE_v2_5_0_release/CAGOULE_v2_5_0_FINAL/tests/: test_cipher.py  test_fp2.py  test_kat.py  test_matrix.py
CAGOULE_v2_5_0_release/cagoule/: _binding.py  _buffer_pool.py  decipher.py  format.py  fp2.py  omega.py  params.py  test_bindings.py  utils.py  version.py
CAGOULE_v2_5_0_release/cagoule.egg-info/: PKG-INFO  SOURCES.txt
CAGOULE_v2_5_0_release/cagoule/c/: fuzz_cipher  test_cipher  test_cipher_pipeline4  test_constant_time  test_math  test_math_avx2  test_matrix  test_matrix_avx2  test_mersenne  test_sbox  test_sbox_avx2
CAGOULE_v2_5_0_release/cagoule/cagoule/: __version__.py
CAGOULE_v2_5_0_release/tests/: test_mu.py  test_nist.py  test_sbox_avx2.py
CAGOULE_v3.1.0/CAGOULE_v3_0_1/: .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
CAGOULE_v3.1.0/CAGOULE_v3_0_1/cagoule/: __init__.py  __version__.py  _binding.py  _buffer_pool.py  cipher.py  cipher_ctr.py  decipher.py  decipher_ctr.py  format.py  fp2.py  kat_vectors.json  mu.py  omega.py  params.py  sbox.py  test_bindings.py
CAGOULE_v3.1.0/CAGOULE_v3_0_1/tests/: kat_omega_vectors.json  test_ctr_api.py  test_ctr_raw_api.py  test_fp2.py  test_kat.py
CAGOULE_v3_0_0_release/CAGOULE_v3_0_0/: .gitignore  ARCHITECTURE.md  regenerate_kat.py
CAGOULE_v3_0_0_release/CAGOULE_v3_0_0/.cagoule_bench/: history.db
CAGOULE_v3_0_0_release/CAGOULE_v3_0_0/cagoule/: _binding.py  cipher_ctr.py  decipher_ctr.py  logger.py  matrix.py
CAGOULE_v3_0_0_release/CAGOULE_v3_0_0/tests/: conftest.py  test_ctr_api.py  test_omega.py  test_sbox.py
cagoule/: __init__.py  __version__.py  _binding.py  _buffer_pool.py  cipher.py  cipher_ctr.py  cipher_ctr_raw.py  decipher.py  decipher_ctr.py  format.py  matrix.py  mu.py  omega.py  params.py  sbox.py  test_bindings.py  utils.py  version.py
cagoule v1.2/: LICENSE  README.md  kat_vectors.json  pyproject.toml
cagoule v1.2/cagoule/: __init__.py  __version__.py  cipher.py  cli.py  decipher.py  fp2.py  matrix.py  mu.py  params.py  sbox.py
cagoule v1.2/cagoule.egg-info/: SOURCES.txt  requires.txt
cagoule v1.2/tests/: generate_kat.py  test_fp2.py  test_kat.py  test_matrix.py  test_mu.py  test_params.py  test_roundtrip.py  test_sbox.py
cagoule/c/: Makefile  check_avx2.py  test_call_cpuid.c  test_math  test_omega  test_sbox  test_sbox_avx2
cagoule/c/fuzz/: fuzz_cipher.c
cagoule/c/include/: cagoule_api.h  cagoule_cipher.h  (+8 more)
tests/: conftest.py  kat_omega_vectors.json  test_cipher.py  test_format.py  test_matrix.py  test_mu.py  test_nist.py  test_omega.py  test_sbox.py  test_sbox_avx2.py
(+162 files in other folders)
