[build-system]
requires      = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "cagoule"
version     = "3.0.0"
description = "Cryptographie Algébrique Géométrique par Ondes et Logique Entrelacée"
readme      = "README.md"
license     = { text = "MIT" }
authors     = [{ name = "Slim Issa", email = "slim.issa@cagoule.io" }]
requires-python = ">=3.12"
keywords    = [
    "cryptography", "encryption", "aead", "symmetric", "cipher",
    "chacha20", "poly1305", "argon2id", "security", "cgl1", "vandermonde",
    "feistel", "modular-arithmetic", "openssl", "hkdf",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C",
    "Topic :: Security :: Cryptography",
    "Typing :: Typed",
]
dependencies = [
    "cryptography>=42.0.0",
    "argon2-cffi>=23.0.0",
]

[project.optional-dependencies]
fallback = ["mpmath>=1.3.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-timeout>=2.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "build>=1.0.0",
    "twine>=4.0.0",
    "mpmath>=1.3.0",
]
bench = [
    "pytest-benchmark>=4.0.0",
    "psutil>=5.9.0",
]

[project.urls]
Homepage      = "https://github.com/slimissa/CAGOULE"
Repository    = "https://github.com/slimissa/CAGOULE"
Documentation = "https://github.com/slimissa/CAGOULE#readme"
Issues        = "https://github.com/slimissa/CAGOULE/issues"
Changelog     = "https://github.com/slimissa/CAGOULE/releases"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where   = ["."]
include = ["cagoule*"]
exclude = ["tests*", "scripts*", "docs*"]

[tool.setuptools.package-data]
cagoule = [
    "kat_vectors.json",
    "py.typed",
    "c/Makefile",
    "c/include/*.h",
    "c/src/*.c",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = ["-v", "--tb=short", "--strict-markers"]
markers   = [
    "slow: marks tests as slow",
    "nist: marks NIST statistical tests",
    "timeout: test timeout in seconds",
]
timeout = 300

[tool.black]
line-length    = 100
target-version = ["py312"]

[tool.coverage.run]
source = ["cagoule"]
omit   = ["tests/*", "scripts/*", "cagoule/__version__.py"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under   = 75
