[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cagoule"
version = "1.5.0"
description = "Cryptographie Algébrique Géométrique par Ondes et Logique Entrelacée"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Slim Issa", email = "slim.issa@cagoule.io" }
]
maintainers = [
    { name = "Slim Issa", email = "slim.issa@cagoule.io" }
]
requires-python = ">=3.9"
keywords = [
    "cryptography",
    "encryption",
    "aead",
    "symmetric",
    "cipher",
    "chacha20",
    "poly1305",
    "argon2id",
    "security",
    "cgl1"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
    "Typing :: Typed",
]
dependencies = [
    "cryptography>=42.0.0",
    "mpmath>=1.3.0",
    "argon2-cffi>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-timeout>=2.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0",
    "build>=1.0.0",
    "twine>=4.0.0",
]
docs = [
    "pdoc>=14.0.0",
    "myst-parser>=1.0.0",
]
bench = [
    "pytest-benchmark>=4.0.0",
    "psutil>=5.9.0",
]

[project.urls]
Homepage = "https://github.com/slimissa/CAGOULE"
Repository = "https://github.com/slimissa/CAGOULE"
Documentation = "https://github.com/slimissa/CAGOULE#readme"
Issues = "https://github.com/slimissa/CAGOULE/issues"
Changelog = "https://github.com/slimissa/CAGOULE/releases"

[project.scripts]
cagoule = "cagoule.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["cagoule*"]
exclude = ["tests*", "scripts*", "docs*"]

[tool.setuptools.package-data]
cagoule = ["kat_vectors.json", "py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--strict-config",
]
timeout = 300
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "nist: marks NIST statistical tests (deselect with '-m \"not nist\"')",
]

[tool.coverage.run]
source = ["cagoule"]
omit = [
    "tests/*",
    "scripts/*",
    "cagoule/cli.py",
    "cagoule/__version__.py",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
fail_under = 80

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312", "py313"]
skip-string-normalization = false

[tool.ruff]
line-length = 100
target-version = "py39"
select = [
    "E", "F", "W", "I", "C", "UP", "B"
]
ignore = [
    "E501",
    "B008",
]
exclude = [
    "tests/*",
    "scripts/*",
]

[tool.ruff.isort]
known-first-party = ["cagoule"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "tests/",
    "scripts/",
]

[tool.pdoc]
output_directory = "docs/"
title = "CAGOULE v1.5.0 — Documentation API"
footer_text = "CAGOULE — Cryptographie Algébrique Géométrique"
search = true
show_source = true
math = true