[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cagoule"
version = "1.2.1"
description = "Cryptographie Algébrique Géométrique par Ondes et Logique Entrelacée"
authors = [{name = "Slim Issa", email = "slim.issa@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "cryptography>=42.0.0",
    "mpmath>=1.3.0",
    "argon2-cffi>=23.0.0",
]

[project.scripts]
cagoule = "cagoule.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cagoule*"]
